# bodhilib-guide

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  conf.py  index.md  index.rst  notes-book-theme.md  outline.txt  prompt.txt  pydoc.txt  pyproject.toml  requirements.txt
architecture/: Benefits_of_Plugin_Architecture.md  Composable_Design.md
contributing/: index.md  roadmap.md
data/data-loader/: pg-great-work.txt  pg-new-ideas.txt
deep-dive/: Components.ipynb  Components_and_Interface.ipynb  Composability.ipynb  Models.ipynb  Prompt.ipynb  Types.ipynb  Welcome: What, Why.ipynb  index.md
getting-started/: Basic_Usage.md  BodhiEngine.ipynb  BodhiProxy.ipynb  DataLoader.ipynb  Embedder.ipynb  ExtractiveQnA.ipynb  FastAPIRoutes.ipynb  LLM.ipynb  Prompt.ipynb  PromptSource.ipynb  PromptStream.ipynb  PromptTemplate.ipynb  RetrievalAugmentedGeneration.ipynb  Splitter.ipynb  VectorDB.ipynb  index.md
images/: rag-ingestion.plantuml  rag-query.plantuml
installation/: Marketplace.md  index.md
plugins/: Plugin_Developer_Guide.md
