[tool.poetry]
name = "bodhilib-guide"
version = "0.1.0"
description = "Jupyter Notebook based guide to bodhilib library"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nbsphinx = "^0.9.3"
sphinx-book-theme = "^1.0.1"
sphinx-copybutton = "^0.5.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
