[tool.poetry]
name = "bodhilib-guide"
version = "0.1.0"
description = "Jupyter Notebook based guide to bodhilib library"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
nbsphinx = "^0.9.3"
sphinx-book-theme = "^1.0.1"
sphinx-copybutton = "^0.5.2"
toml = "^0.10.2"
ipykernel = "^6.25.2"
jupyterlab = "^4.0.6"
notebook = "^7.0.4"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-design = "^0.5.0"
sphinx-tabs = "^3.4.1"
ipywidgets = "^8.1.1"
pre-commit = "^3.4.0"
codespell = "^2.2.5"
bodhilib = { path = "../bodhilib" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
ignore-words = 'codespell-ignore.txt'
exclude-file = 'poetry.lock'
